--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -1,7 +1,13 @@
 .header  {
   font-family: monospace;
   background: papayawhip;
+  padding: 8px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;   
 }
+
+
 
 .logo {
   font-size: 48px;
@@ -9,12 +15,18 @@
   color: tomato;
   background: white;
   padding: 4px 32px;
+ 
 }
 
 ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
-}
+  margin: 0;
+  padding: 0;
+  display: flex;
+  gap: 8px;
+ 
+ }
 
 a {
   font-size: 22px;
@@ -23,3 +35,4 @@ a {
   /* this removes the line under the links */
   text-decoration: none;
 }
+
