--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -1,5 +1,6 @@
 body {
   font-family: 'Courier New', Courier, monospace;
+  text-align: center;
 }
 
 img {
@@ -10,7 +11,36 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
+ 
+  margin-bottom: 32px;
 }
+
+
+
+.gallery {
+  display: flex;
+  gap: 52px;
+  justify-content: center;
+
+}
+
+
+.image {
+  max-width: 200px;
+  
+}
+
+
+
+
+
+
+
+
+
+
+
+
 
 /* do not edit this footer */
 .footer {
