--- a/grid/01-grid-layout-1/style.css
+++ b/grid/01-grid-layout-1/style.css
@@ -2,12 +2,26 @@ body, html {
   height: 100%;
   margin: 0;
 }
+/* 
+- The gap is 15px
+- The grid has two columns
+- The grid has four rows
+- The second column is three times larger than the first
+- The third row is five times larger than the others
+- The header and footer elements span across both columns
+- The sidebar element only spans across the first column
+- The nav and article elements span across the second column */
 
 .container {
   text-align: center;
   height: 100%;
   padding: 16px;
   box-sizing: border-box;
+  display: grid;
+  /* grid-template: 1fr 1fr 5fr 1fr / 1fr 3fr; */
+  grid-template-columns: 300px 900px;
+  grid-template-rows: 100px 100px 500px 100px;
+  gap: 15px;
 }
 
 .container div {
@@ -21,18 +35,22 @@ body, html {
 
 .header {
   background-color: #FFDE22;
+  grid-area: 1/1/1/-1;
 }
 
 .sidebar {
   background-color: #FF7755;
+  grid-area: 2/1/-2/2;
 }
 
 .nav {
   background-color: #00DDFF;
+  grid-area: 2/2/2/-1;
 }
 
 .article {
   background-color: #bccbde;
+  grid-area: 3/2/3/-1;
 }
 
 .article p {
@@ -44,4 +62,5 @@ body, html {
 
 .footer {
   background-color: #393f4d;
+  grid-column: 1/-1;
 }
