--- a/grid/03-grid-layout-3/style.css
+++ b/grid/03-grid-layout-3/style.css
@@ -3,8 +3,29 @@
   padding: 0;
 }
 
+/*
+- The container element has two columns
+- The container's second column is 4 times larger than the first column
+- The container element has a gap of 4px
+- The header element has two columns
+- The `ul` inside the menu element contains another grid
+- The `ul` inside the nav element contains another grid
+- The sidebar element has a gap of 50px
+- The text elements in the sidebar are centered with grid
+- The article element should set grid columns using `repeat` along with the `auto-fit` and `minmax` properties
+- The article columns should have a minimum value of 250px and a maximum of 1fr unit
+- The article element has a gap of 15px
+- The card elements inside the article container have a height of 200px
+- The header and footer span across both columns
+- The sidebar only spans across the first column
+- The nav and article elements only span across the second column
+*/
+
 .container {
   text-align: center;
+  display: grid;
+  grid-template-columns: 1fr 4fr;
+  gap: 4px;
 }
 
 .container div {
@@ -17,15 +38,39 @@
 
 .header {
   background-color: #393f4d;
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  grid-column: 1/-1; 
+}
+
+.logo {
+  justify-self: start;
+}
+
+.menu {
+  display: grid;
+  align-self: center;
+}
+
+.menu ul {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  place-items: center;
+  
 }
 
 .menu ul,
 .menu li {
   font-size: 16px;
+  list-style: none;
 }
 
 .sidebar {
   background-color: #FF7755;
+  display: grid;
+  gap: 50px;
+  grid-row: 2/4;
+
 }
 
 .sidebar .photo {
@@ -34,6 +79,7 @@
   font-size: 12px;
   font-weight: normal;
   border-radius: 10px;
+  place-content: center;
 }
 
 
@@ -42,19 +88,34 @@
   color: black;
   font-size: 16px;
   font-weight: normal;
+  display: grid;
+  place-items: center;
+  
 }
 
 .nav {
   background-color: #FF7755;
 }
 
+.nav ul {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  list-style: none;
+}
+
 .nav ul li {
   font-size: 16px;
   text-transform: uppercase;
+  
 }
 
 .article {
   background-color: #bccbde;
+  grid-column: 2/3;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  grid-template-rows: auto;
+  gap: 15px
 }
 
 .article p {
@@ -68,12 +129,14 @@
   background-color: #FFFFFF;
   color: black;
   text-align: center;
+  height: 200px;
 }
 
 .card p {
   color: black;
   font-weight: normal;
   font-size: 14px;
+  padding: 5px;
 }
 
 .card .title {
@@ -83,6 +146,7 @@
 
 .footer {
   background-color: #393f4d;
+  grid-column: 1/-1;
 }
 
 .footer p {
